tests/samples/commands-bad-syntax.err
commands-bad-syntax.flow:1:Syntax error. "when read *command fl".
