tests/samples/commands-bad-syntax.flow
when read command flow_name

flow flow_name do
  say "nothing"
done
